--- a/Assignment_4/niosII_hw_dev_tutorial/nios2_quartus2_project.qsf
+++ b/Assignment_4/niosII_hw_dev_tutorial/nios2_quartus2_project.qsf
@@ -79,9 +79,6 @@ set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_RO
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
-set_global_assignment -name SDC_FILE hw_dev_tutorial.sdc
-set_global_assignment -name QIP_FILE Assignment4_Qsys/synthesis/Assignment4_Qsys.qip
-set_global_assignment -name BDF_FILE nios2_quartus2_project.bdf
 set_location_assignment PIN_R8 -to CLOCK_50
 set_location_assignment PIN_A15 -to LED[0]
 set_location_assignment PIN_A13 -to LED[1]
@@ -394,4 +391,10 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO_1[7]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO_1[8]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO_1[9]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to GPIO_1[10]
+set_global_assignment -name VHDL_FILE ip/ESL_bus_demo/QuadratureEncoder.vhd
+set_global_assignment -name VHDL_FILE ip/ESL_bus_demo/esl_bus_demo_example.vhdl
+set_global_assignment -name VHDL_FILE ip/ESL_bus_demo/esl_bus_demo.vhdl
+set_global_assignment -name SDC_FILE hw_dev_tutorial.sdc
+set_global_assignment -name QIP_FILE Assignment4_Qsys/synthesis/Assignment4_Qsys.qip
+set_global_assignment -name BDF_FILE nios2_quartus2_project.bdf
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
