--- a/PID Controller/TiltController/project/VS2019/PositionControllerTilt.vcxproj.filters
+++ b/PID Controller/TiltController/project/VS2019/PositionControllerTilt.vcxproj.filters
@@ -20,16 +20,16 @@
     <ClInclude Include="..\..\xxfuncs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\xxinteg.h">
+    <ClInclude Include="..\..\Tiltinteg.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\xxmatrix.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\xxmodel.h">
+    <ClInclude Include="..\..\Tiltmodel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\xxsubmod.h">
+    <ClInclude Include="..\..\Tiltsubmod.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\xxtypes.h">
@@ -46,22 +46,22 @@
     <ClCompile Include="..\..\xxfuncs.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\xxinteg.c">
+    <ClCompile Include="..\..\Tiltinteg.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\xxinverse.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\xxmain.c">
+    <ClCompile Include="..\..\Tiltmain.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\xxmatrix.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\xxmodel.c">
+    <ClCompile Include="..\..\Tiltmodel.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\xxsubmod.c">
+    <ClCompile Include="..\..\Tiltsubmod.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
